# kiwibot_project

.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/opencv/: Dockerfile
docs/: homework.md
robotics/configs/: startRobotics.sh  valgrind_sc.sh
robotics/ros2/src/interfaces/src/modules/: speaker.cpp
robotics/ros2/src/location/: package.xml  setup.py
robotics/ros2/src/location/location/: location_node.py
robotics/ros2/src/motion_control/src/: pid_controller.cpp  speed_controller.cpp
robotics/ros2/src/plotter/plotter/: plotter_node.py
robotics/ros2/src/rpm_converter/: CMakeLists.txt  package.xml
robotics/ros2/src/rpm_converter/include/rpm_converter/: rpm_converter.hpp
robotics/ros2/src/rpm_converter/src/: rpm_converter_node.cpp
robotics/ros2/src/wheel_odometry/src/: wheel_odometry.cpp
